tenants/platform/services/grafana/postInstall/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.jdwlabs.com
      secretName: grafana-tls
  rules:
    - host: grafana.jdwlabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platform-grafana
                port:
                  number: 80
